fix overflow for ios

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -15,6 +15,12 @@ body {
 }
 html.ov-hidden {
 	overflow: hidden;
+	.body-inner {
+		position: fixed;
+		overflow: hidden;
+		width: 100%;
+		height: 100%;
+	}
 }
 div, p {
 	line-height: 1.4;
@@ -121,7 +127,7 @@ a {
 	padding-top: 18px;
 	padding-left: 17px;
 	z-index: 100;
-	max-height: 100vh;
+	max-height: 80vh;
 	overflow: scroll;
 	display: none;
 	@include desktop {
